doc: documenta notebook de visualização

--- a/Data-Layer/silver/vizualization.ipynb
+++ b/Data-Layer/silver/vizualization.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "aacacab3",
+   "metadata": {},
+   "source": [
+    "## Contexto da análise de insucessos\n",
+    "\n",
+    "Este notebook explora **taxas e volumes de insucesso em disciplinas** da FCTE/FGA a partir de dados consolidados pelo pipeline de dados (camada *silver*).\n",
+    "\n",
+    "### Escopo dos dados\n",
+    "- **População considerada**: apenas alunos que **já escolheram o curso**, ou seja, que **estão no mínimo no 3º semestre** do curso.\n",
+    "- **Consequência importante**: as reprovações em disciplinas típicas do **1º período** (por exemplo, **Cálculo 1, Desenho Industrial, APC, Introdução à Engenharia, Engenharia e Ambiente**) **não correspondem a alunos de 1º ingresso**, mas sim a alunos que **já reprovaram anteriormente pelo menos uma vez** nessas disciplinas e as estão **reofertando**.\n",
+    "- **Interpretação das taxas de insucesso**: sempre que olharmos para `Total Insucesso` ou para a **taxa de insucesso (%)**, estamos falando **desse público específico (alunos a partir do 3º semestre)**.\n",
+    "\n",
+    "Isso significa que, ao interpretar os gráficos e tabelas ao longo do notebook, especialmente para disciplinas de 1º semestre, devemos ter em mente que os números refletem um **público que já foi exposto à disciplina**, e não o comportamento inicial de calouros no primeiro contato com a disciplina.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "e89cd446",
@@ -20,6 +38,27 @@
    "metadata": {},
    "source": [
     "## Read Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0c59fad",
+   "metadata": {},
+   "source": [
+    "### Sobre o `Total Insucesso` e a leitura dos dados carregados\n",
+    "\n",
+    "O dataset carregado na célula abaixo contém, para cada disciplina-oferta (por semestre):\n",
+    "- **`Nome`**: nome da disciplina.\n",
+    "- **`Semestre`**: código do semestre de oferta (ex.: `2023-2`, `2024-1`).\n",
+    "- **`Discentes`**: quantidade de alunos matriculados na oferta.\n",
+    "- **`Turmas`**: número de turmas abertas no semestre.\n",
+    "- **`Total Insucesso`**: soma de todas as formas de reprovação, derivada de\n",
+    "  `Reprovações Nota`, `Reprovações Falta`, `Reprovações Média e Falta` e\n",
+    "  `Reprovações Nota e Falta`.\n",
+    "- **`Departamento`** e **`Código`**: informações acadêmicas de referência.\n",
+    "\n",
+    "Lembrando que essas métricas são sempre calculadas **para alunos já a partir do 3º semestre do curso**, de modo que os resultados **não descrevem o comportamento de calouros** na primeira vez que cursam a disciplina.\n",
+    "\n"
    ]
   },
   {
@@ -1337,6 +1376,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0729db72",
+   "metadata": {},
+   "source": [
+    "### Interpretação do ranking de disciplinas com mais insucessos\n",
+    "\n",
+    "O gráfico abaixo mostra o **Top 10 de disciplinas com maior `Total Insucesso`**, considerando o agregado de todos os semestres disponíveis no dataset.\n",
+    "\n",
+    "Pontos de leitura importantes:\n",
+    "- **Escala x insucesso**: disciplinas com muitos insucessos costumam ter também muitos alunos matriculados, então o volume absoluto precisa ser lido junto com `Discentes`.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "f5e1ddcb",
@@ -1387,7 +1440,13 @@
    "id": "aed81718",
    "metadata": {},
    "source": [
-    "## Failures per Semester"
+    "## Failures per Semester\n",
+    "\n",
+    "Esta seção mostra a **evolução temporal do `Total Insucesso` por semestre**, agregando todas as disciplinas em cada período letivo.\n",
+    "\n",
+    "- Cada ponto da linha representa a **soma de insucessos de todas as disciplinas naquele semestre**.\n",
+    "- A linha tracejada vermelha é uma **tendência linear aproximada**, calculada via regressão (numpy.polyfit), que ajuda a visualizar se o insucesso está **aumentando, diminuindo ou se mantendo estável** ao longo do tempo.\n",
+    "- Lembrando que continuamos olhando **apenas para alunos a partir do 3º semestre**, então a curva reflete o comportamento desse público, e não de ingressantes.\n"
    ]
   },
   {
@@ -1559,6 +1618,46 @@
     "        variacao_taxa = ((taxa_insucesso.iloc[-1] - taxa_insucesso.iloc[0]) / taxa_insucesso.iloc[0] * 100)\n",
     "        print(f\"Variação Total: {variacao_total:+.1f}%\")\n",
     "        print(f\"Variação Taxa: {variacao_taxa:+.1f}%\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c518d7dc",
+   "metadata": {},
+   "source": [
+    "### Leitura da evolução da disciplina com maior insucesso (ex.: Cálculo 1)\n",
+    "\n",
+    "A célula anterior identifica automaticamente a **disciplina com maior `Total Insucesso`** no conjunto de dados (no momento, `CÁLCULO 1`) e constrói duas visualizações:\n",
+    "\n",
+    "- **Gráfico superior (Total de Insucessos)**: mostra a variação do **número absoluto de insucessos por semestre** para essa disciplina.\n",
+    "- **Gráfico inferior (Taxa de Insucesso)**: mostra a **proporção de alunos reprovados (%)**, normalizando pelo total de matriculados (`Discentes`) em cada semestre.\n",
+    "- A saída textual logo acima dos gráficos mostra, para cada semestre, o **número de insucessos** e o **número de discentes** (\n",
+    "  isso ajuda a avaliar se uma variação na taxa está ligada a turmas maiores/menores ou a mudança real no desempenho).\n",
+    "\n",
+    "Observações importantes:\n",
+    "- A análise de tendência ao final indica se o **total de insucessos** e a **taxa de insucesso** estão crescendo, diminuindo ou estáveis, e calcula a variação percentual entre o primeiro e o último semestre observado.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca4c7950",
+   "metadata": {},
+   "source": [
+    "### Decomposição do Total de Insucesso por tipo de reprovação\n",
+    "\n",
+    "A célula acima soma, em todo o dataset, os diferentes **tipos de reprovação**:\n",
+    "- `Reprovações Nota`\n",
+    "- `Reprovações Falta`\n",
+    "- `Reprovações Média e Falta`\n",
+    "- `Reprovações Nota e Falta`\n",
+    "\n",
+    "Essa decomposição permite entender **quais mecanismos acadêmicos mais contribuem para o insucesso**:\n",
+    "- Se o valor de `Reprovações Falta` for dominante, por exemplo, há um forte componente de **evasão de aula/assiduidade**.\n",
+    "- Se reprovações relacionadas à **nota/média** forem maiores, o foco de intervenção tende a ser **conteúdo, carga, métodos de avaliação ou pré-requisitos mal consolidados**.\n",
+    "\n",
+    "Esse resumo é útil para orientar **ações específicas** (ex.: reforço de acompanhamento de frequência, monitorias, revisão de avaliação etc.).\n",
+    "\n"
    ]
   },
   {
