add markdown in etl-silver-to-gold

--- a/Transformer/silver-to-gold/etl-silver-to-gold.ipynb
+++ b/Transformer/silver-to-gold/etl-silver-to-gold.ipynb
@@ -1,17 +1,72 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "908ec554",
+   "metadata": {},
+   "source": [
+    "# ETL Silver to Gold\n",
+    "Este notebook realiza o processo de ETL para transformar dados do estágio Silver para o estágio Gold do Data Warehouse.\n",
+    "\n",
+    "## Etapas do Processo\n",
+    "1. **Importação de bibliotecas**: Carrega as dependências necessárias para manipulação de dados e conexão com o banco.\n",
+    "2. **Conexão com o banco de dados**: Cria o engine para acesso ao PostgreSQL.\n",
+    "3. **Leitura dos dados da tabela disciplinas**: Carrega os dados da tabela fonte para um DataFrame.\n",
+    "4. **Processamento das dimensões**: Cria e carrega as tabelas de dimensão (`dim_disc`, `dim_dpt`, `dim_cur`, `dim_tmp`).\n",
+    "5. **Leitura das dimensões para mapeamento de chaves**: Recupera as dimensões com suas surrogate keys para uso na tabela fato.\n",
+    "6. **Construção e carga da tabela fato**: Realiza o merge dos dados e carrega a tabela fato (`fato_insuc`).\n",
+    "7. **Fechamento da conexão**: Finaliza a conexão com o banco de dados.\n",
+    "\n",
+    "Cada etapa está documentada e comentada ao longo do notebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0870413",
+   "metadata": {},
+   "source": [
+    "### Importing Required Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "9e0b1028",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "numpy.dtype size changed, may indicate binary incompatibility. Expected 96 from C header, got 88 from PyObject",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpsycopg2\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m sql\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msqlalchemy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m create_engine\n",
+      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/pandas/__init__.py:22\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m _hard_dependencies, _dependency, _missing_dependencies\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# numpy compat\u001b[39;00m\n\u001b[0;32m---> 22\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcompat\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m is_numpy_dev \u001b[38;5;28;01mas\u001b[39;00m _is_numpy_dev  \u001b[38;5;66;03m# pyright: ignore # noqa:F401\u001b[39;00m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     25\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_libs\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m hashtable \u001b[38;5;28;01mas\u001b[39;00m _hashtable, lib \u001b[38;5;28;01mas\u001b[39;00m _lib, tslib \u001b[38;5;28;01mas\u001b[39;00m _tslib\n",
+      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/pandas/compat/__init__.py:18\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TYPE_CHECKING\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_typing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m F\n\u001b[0;32m---> 18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcompat\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     19\u001b[0m     is_numpy_dev,\n\u001b[1;32m     20\u001b[0m     np_version_under1p21,\n\u001b[1;32m     21\u001b[0m )\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcompat\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyarrow\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     23\u001b[0m     pa_version_under1p01,\n\u001b[1;32m     24\u001b[0m     pa_version_under2p0,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     31\u001b[0m     pa_version_under9p0,\n\u001b[1;32m     32\u001b[0m )\n\u001b[1;32m     34\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m TYPE_CHECKING:\n",
+      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/pandas/compat/numpy/__init__.py:4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;124;03m\"\"\" support numpy compatibility across versions \"\"\"\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutil\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mversion\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Version\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# numpy versioning\u001b[39;00m\n\u001b[1;32m      7\u001b[0m _np_version \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39m__version__\n",
+      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/pandas/util/__init__.py:2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# pyright: reportUnusedImport = false\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutil\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_decorators\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (  \u001b[38;5;66;03m# noqa:F401\u001b[39;00m\n\u001b[1;32m      3\u001b[0m     Appender,\n\u001b[1;32m      4\u001b[0m     Substitution,\n\u001b[1;32m      5\u001b[0m     cache_readonly,\n\u001b[1;32m      6\u001b[0m )\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutil\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mhashing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (  \u001b[38;5;66;03m# noqa:F401\u001b[39;00m\n\u001b[1;32m      9\u001b[0m     hash_array,\n\u001b[1;32m     10\u001b[0m     hash_pandas_object,\n\u001b[1;32m     11\u001b[0m )\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getattr__\u001b[39m(name):\n",
+      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/pandas/util/_decorators.py:14\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m      7\u001b[0m     Any,\n\u001b[1;32m      8\u001b[0m     Callable,\n\u001b[1;32m      9\u001b[0m     Mapping,\n\u001b[1;32m     10\u001b[0m     cast,\n\u001b[1;32m     11\u001b[0m )\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_libs\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mproperties\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m cache_readonly\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_typing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     16\u001b[0m     F,\n\u001b[1;32m     17\u001b[0m     T,\n\u001b[1;32m     18\u001b[0m )\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutil\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_exceptions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m find_stack_level\n",
+      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/pandas/_libs/__init__.py:13\u001b[0m\n\u001b[1;32m      1\u001b[0m __all__ \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNaT\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNaTType\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterval\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     10\u001b[0m ]\n\u001b[0;32m---> 13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_libs\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01minterval\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Interval\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_libs\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtslibs\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     15\u001b[0m     NaT,\n\u001b[1;32m     16\u001b[0m     NaTType,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     21\u001b[0m     iNaT,\n\u001b[1;32m     22\u001b[0m )\n",
+      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/pandas/_libs/interval.pyx:1\u001b[0m, in \u001b[0;36minit pandas._libs.interval\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: numpy.dtype size changed, may indicate binary incompatibility. Expected 96 from C header, got 88 from PyObject"
+     ]
+    }
+   ],
    "source": [
     "import psycopg2\n",
     "from psycopg2 import sql\n",
     "import os\n",
     "import pandas as pd\n",
     "from sqlalchemy import create_engine"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97e39923",
+   "metadata": {},
+   "source": [
+    "### Creating The PostgreSQL Database Connection"
    ]
   },
   {
@@ -25,6 +80,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e46fc62e",
+   "metadata": {},
+   "source": [
+    "### Reading Data From The 'Disciplinas' Table Into A DataFrame"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "849ba140",
@@ -33,6 +96,14 @@
    "source": [
     "table_name = \"your_table\"\n",
     "df_disciplinas = pd.read_sql_table(\"disciplinas\", con=engine)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4adcd1bf",
+   "metadata": {},
+   "source": [
+    "### Displaying The Loaded Data For Verification"
    ]
   },
   {
@@ -360,6 +431,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aa7e6799",
+   "metadata": {},
+   "source": [
+    "### Processing And Loading The Discipline Dimension (`dim_disc`)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "18168ad2",
@@ -387,6 +466,14 @@
     "    print(f\"Sucesso: {len(df_dim_disc)} registros carregados em dw.dim_disc.\")\n",
     "except Exception as e:\n",
     "    print(f\"Erro ao carregar dw.dim_disc: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8e2aca6",
+   "metadata": {},
+   "source": [
+    "### Processing And Loading The Department Dimension (`dim_dpt`)"
    ]
   },
   {
@@ -422,6 +509,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c173ff41",
+   "metadata": {},
+   "source": [
+    "### Processing And Loading The Course Dimension (`dim_cur`)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "55b2a132",
@@ -451,6 +546,14 @@
     "    print(f\"Sucesso: {len(df_dim_cur)} registros carregados em dw.dim_cur.\")\n",
     "except Exception as e:\n",
     "    print(f\"Erro ao carregar dw.dim_cur: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc0b9180",
+   "metadata": {},
+   "source": [
+    "### Processing And Loading The Time Dimension (`dim_tmp`)"
    ]
   },
   {
@@ -504,6 +607,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7bf2685a",
+   "metadata": {},
+   "source": [
+    "### Reading Dimensions To Map Foreign Keys (Surrogate Keys)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "id": "83ffe262",
@@ -541,6 +652,14 @@
     "except Exception as e:\n",
     "    print(f\"Erro ao ler as tabelas de dimensão do schema 'dw': {e}\")\n",
     "    raise e"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a87008e",
+   "metadata": {},
+   "source": [
+    "### Building And Loading The Fact Table (`fato_insuc`)"
    ]
   },
   {
@@ -676,6 +795,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "34a2de4d",
+   "metadata": {},
+   "source": [
+    "### Closing The Database Connection"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "761df741",
@@ -694,6 +821,14 @@
     "# --- 9. FECHAR CONEXÃO ---\n",
     "engine.dispose()\n",
     "print(\"\\nConexão com o banco de dados fechada.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28f08f5a",
+   "metadata": {},
+   "source": [
+    "### Final Display Of The Loaded Fact Table Data"
    ]
   },
   {
@@ -973,7 +1108,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -987,7 +1122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
