edit pyspark etl and move queries-mer-der-dld

--- a/Transformer/raw-to-silver/etl-raw_to_silver_pyspark.ipynb
+++ b/Transformer/raw-to-silver/etl-raw_to_silver_pyspark.ipynb
@@ -653,6 +653,113 @@
     "    .mode(\"overwrite\") \\\n",
     "    .csv(\"lista-insucesso-processed-spark\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0100b3fa",
+   "metadata": {},
+   "source": [
+    "## Populate Databse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77b7e235",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9744dd1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psycopg2\n",
+    "from psycopg2 import sql\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61051d94",
+   "metadata": {},
+   "source": [
+    "### Connect Postgres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9d74af2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DB_HOST = os.getenv(\"DATABASE_HOST\", \"localhost\")\n",
+    "DB_PORT = os.getenv(\"DATABASE_PORT\", \"5432\")\n",
+    "DB_USER = os.getenv(\"DATABASE_USER\", \"postgres\")\n",
+    "DB_PASSWORD = os.getenv(\"DATABASE_PASSWORD\", \"postgres123\")\n",
+    "\n",
+    "\n",
+    "conn = psycopg2.connect(\n",
+    "    host=DB_HOST,\n",
+    "    port=DB_PORT,\n",
+    "    user=DB_USER,\n",
+    "    password=DB_PASSWORD\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb308ed6",
+   "metadata": {},
+   "source": [
+    "### Populate Database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "808a2419",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor = conn.cursor()\n",
+    "\n",
+    "df = final_spark_dataframe.toPandas()\n",
+    "\n",
+    "for _, row in df.iterrows():\n",
+    "    cursor.execute(\"\"\"\n",
+    "        INSERT INTO disciplinas (\n",
+    "            codigo, nome, turmas, discentes, cancelamentos,\n",
+    "            reprovacoesMedia, reprovacoesNota, reprovacoesFalta,\n",
+    "            reprovacoesMediaFalta, reprovacoesNotaFalta, trancamentos,\n",
+    "            insucessos, semestre, departamento, curso\n",
+    "        ) VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s)\n",
+    "    \"\"\", (\n",
+    "        row['Código'],\n",
+    "        row['Nome'],\n",
+    "        row['Turmas'],\n",
+    "        row['Discentes'],\n",
+    "        row['Cancelamentos'],\n",
+    "        row['Reprovações Média'],\n",
+    "        row['Reprovações Nota'],\n",
+    "        row['Reprovações Falta'],\n",
+    "        row['Reprovações Média e Falta'],\n",
+    "        row['Reprovações Nota e Falta'],\n",
+    "        row['Trancamentos'],\n",
+    "        row['Total Insucesso'],\n",
+    "        row['Semestre'],\n",
+    "        row['Departamento'],\n",
+    "        row['Curso']\n",
+    "    ))\n",
+    "\n",
+    "conn.commit()\n",
+    "cursor.close()\n",
+    "conn.close()"
+   ]
   }
  ],
  "metadata": {
