--- a/Transformer/raw-to-silver/etl-raw_to_silver_pyspark.ipynb
+++ b/Transformer/raw-to-silver/etl-raw_to_silver_pyspark.ipynb
@@ -32,36 +32,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6b554973",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No active Spark session found.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Using incubator modules: jdk.incubator.vector\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties\n",
-      "25/10/10 16:31:57 WARN Utils: Your hostname, dartmol203, resolves to a loopback address: 127.0.1.1; using 192.168.0.17 instead (on interface wlp2s0)\n",
-      "25/10/10 16:31:57 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/10/10 16:31:58 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Spark Version: 4.0.1\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'findspark'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mfindspark\u001b[39;00m\n\u001b[32m      3\u001b[39m findspark.init()\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mfunctools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m reduce\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'findspark'"
      ]
     }
    ],
@@ -764,7 +747,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv (3.13.3)",
    "language": "python",
    "name": "python3"
   },
@@ -778,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
