--- a/Transformer/raw-to-silver/etl-raw_to_silver_pyspark.ipynb
+++ b/Transformer/raw-to-silver/etl-raw_to_silver_pyspark.ipynb
@@ -32,19 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "6b554973",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'findspark'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mfindspark\u001b[39;00m\n\u001b[32m      3\u001b[39m findspark.init()\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mfunctools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m reduce\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'findspark'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Previous Spark session stopped.\n",
+      "✅ Spark Version: 4.0.1\n"
      ]
     }
    ],
@@ -89,13 +86,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c08665b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframes_all_sheets = pd.read_excel(\"../bronze/Relatorio-Lista-Insucesso.xlsx\", sheet_name=None)\n",
-    "dataframes_all_sheets_automotiva = pd.read_excel(\"../bronze/Relatorio-Lista-Insucesso-Automotiva.xlsx\", sheet_name=None)"
+    "dataframes_all_sheets = pd.read_excel(\"../../Data-Layer/raw/Relatorio-Lista-Insucesso.xlsx\", sheet_name=None)\n",
+    "dataframes_all_sheets_automotiva = pd.read_excel(\"../../Data-Layer/raw//Relatorio-Lista-Insucesso-Automotiva.xlsx\", sheet_name=None)"
    ]
   },
   {
@@ -108,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3208fd30",
    "metadata": {},
    "outputs": [
@@ -149,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5e7fe71c",
    "metadata": {},
    "outputs": [
@@ -198,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b2c86690",
    "metadata": {},
    "outputs": [
@@ -230,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c3287178",
    "metadata": {},
    "outputs": [
@@ -238,8 +235,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/10/10 16:32:19 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
-      "                                                                                \r"
+      "25/11/25 19:09:10 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
+      "[Stage 2:>                                                          (0 + 8) / 8]\r"
      ]
     },
     {
@@ -256,6 +253,13 @@
       "|    max| Total:|VIGILÂNCIA EPIDEM...| NaN|               322|             6640|               202|              744|               0|              210|                        0|                       0|              578|              1734|\n",
       "+-------+-------+--------------------+----+------------------+-----------------+------------------+-----------------+----------------+-----------------+-------------------------+------------------------+-----------------+------------------+\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -289,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fde1f323",
    "metadata": {},
    "outputs": [],
@@ -307,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "21fd4041",
    "metadata": {},
    "outputs": [
@@ -374,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "63e59545",
    "metadata": {},
    "outputs": [
@@ -441,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "de363821",
    "metadata": {},
    "outputs": [],
@@ -470,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ce2c7cbe",
    "metadata": {},
    "outputs": [
@@ -504,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "9b396292",
    "metadata": {},
    "outputs": [
@@ -512,7 +516,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 11:>                                                         (0 + 1) / 1]\r"
+      "[Stage 9:=====================================================>   (60 + 4) / 64]\r"
      ]
     },
     {
@@ -545,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6b97c35a",
    "metadata": {},
    "outputs": [
@@ -555,7 +559,7 @@
        "DataFrame[Código: string, Nome: string, Turmas: bigint, Discentes: bigint, Cancelamentos: bigint, Reprovações Média: bigint, Reprovações Nota: bigint, Reprovações Falta: bigint, Reprovações Média e Falta: bigint, Reprovações Nota e Falta: bigint, Trancamentos: bigint, Total Insucesso: bigint, Semestre: string, Departamento: string, Curso: string]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "faf785a2",
    "metadata": {},
    "outputs": [
@@ -747,7 +751,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.13.3)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -761,7 +765,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
